--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">Using Floating Action Button</string>
     <string name="action_settings">Settings</string>
+
+    <string name="message">Using Floating Action Button</string>
+    <string name="new_message">Hey, I\'m the new Message\!</string>
 </resources>
